Hopefully resolved the css not showing in github issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -320,6 +320,17 @@ h2 {
   background-color: transparent;
 }
 
+/* bmi */
+
+th, td {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-collapse: collapse;
+}
+
+td {
+  color: rgba(255, 255, 255, 0.5);
+}
+
 /* trainers */
 
 .tra-cont {
